--- a/style.scss
+++ b/style.scss
@@ -23,13 +23,15 @@ body{
     }
     .navbar-items{
         flex: 4;
+       
         .navbar-item{
             color:#ffffff;
             text-decoration: none;
-            float: right;
-            flex-direction: column-reverse;
-            padding: 10px;
-            margin: 0 5%;
+            padding: 20px;
+            margin: 0 10px;
+            &:hover{
+                font-weight: bold;
+            }
         }
         
     }
@@ -59,17 +61,18 @@ body{
     .products-section{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-gap: 1rem;
+        grid-gap: .5rem;
         .product{
-            margin: 50px;
+            margin:20px  50px;
+            
             img{
             border-radius: 10px;
-            width: 400px;
+            width: 100%;
             height: 300px;
             }
             iframe{
             border-radius: 10px;
-            width: 400px;
+            width: 100%;
             height: 300px;
             }
         }
@@ -89,7 +92,7 @@ body{
         padding: 20px 50px 50px 50px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-column-gap: 5rem;
+        grid-column-gap: 2rem;
         h4{height: 50px;
             display: flex;
             align-items: center;
@@ -98,10 +101,12 @@ body{
         .left-container{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 1rem;
         }
         .right-container{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 1rem;
         }
     }
 }
@@ -127,6 +132,10 @@ body{
         a{
             text-decoration: none;
             color: rgb(253, 247, 247);
+            &:hover{
+                color: red;
+                text-decoration: underline;
+            }
         }
     }
    }
@@ -143,3 +152,5 @@ body{
     justify-content: center;
     align-items: center;
 }
+
+@import './media';
